--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
+    "react-vertical-timeline-component": "^3.5.3",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0"
   },
